--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,11 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/test_auth
+spring.datasource.username=test_user
+spring.datasource.password=test_user
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-server.port=8077
+spring.flyway.baseline-on-migrate=true
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+
+
+
