--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,12 @@ spring.datasource.username=test_user
 spring.datasource.password=test_user
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.flyway.baseline-on-migrate=true
-spring.jpa.show-sql=true
+#spring.flyway.baseline-on-migrate=true
+#spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=true
 
 
 
+spring.spa.properties.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
