--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/test_auth
+spring.datasource.url=jdbc:postgresql://localhost:5432/test
 spring.datasource.username=test_user
 spring.datasource.password=test_user
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -8,9 +8,10 @@ jwt.token.expired=3600000
 
 #spring.flyway.baseline-on-migrate=true
 #spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 
 spring.spa.properties.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 
+server.port=8082
