--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/test
+server.port=8080
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/auth?serverTimezone=UTC
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=test_user
 spring.datasource.password=test_user
-spring.datasource.driver-class-name=org.postgresql.Driver
 
-jwt.token.secret=jwtappdemo
-jwt.token.expired=3600000
+jwt.token.secret=demo
+jwt.token.expired=3600000000
 
 #spring.flyway.baseline-on-migrate=true
 #spring.jpa.show-sql=true
@@ -13,5 +15,3 @@ spring.jpa.generate-ddl=true
 
 spring.spa.properties.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
-
-server.port=8082
