--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,8 @@ spring.datasource.username=test_user
 spring.datasource.password=test_user
 
 jwt.token.secret=demo
-jwt.token.expired=3600000000
+jwt.access_token.expired=10
+jwt.refresh_token.expired=10
 
 #spring.flyway.baseline-on-migrate=true
 #spring.jpa.show-sql=true
