--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-server.port=8080
+server.port=8081
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/auth?serverTimezone=UTC
+spring.datasource.url=jdbc:postgresql://localhost:5432/auth
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=test_user
 spring.datasource.password=test_user
