change time for tokens. access = 1 day refresh = 1 week

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8081
+server.port=8080
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/auth
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -6,8 +6,8 @@ spring.datasource.username=test_user
 spring.datasource.password=test_user
 
 jwt.token.secret=demo
-jwt.access_token.expired=10
-jwt.refresh_token.expired=10
+jwt.access_token.expired=3600000
+jwt.refresh_token.expired=604800000
 
 #spring.flyway.baseline-on-migrate=true
 #spring.jpa.show-sql=true
